Add logging for web command execution

--- a/Modules/LoggingModule/Language/ModuleTexts.de.resx
+++ b/Modules/LoggingModule/Language/ModuleTexts.de.resx
@@ -120,4 +120,8 @@
   <data name="PlayerLeftGuildLogInfo" xml:space="preserve">
     <value>{0} ({1}) hat den Server verlassen.</value>
   </data>
+  <data name="WebCommandExecutedInfo" xml:space="preserve">
+    <value>Befehl im Web wurde von {0} ausgeführt:
+{1}</value>
+  </data>
 </root>
